; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5211/extr_ar5211_misc.c_ar5211GpioCfgOutput.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5211/extr_ar5211_misc.c_ar5211GpioCfgOutput.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_hal = type { i32 }

@AR_NUM_GPIO = common dso_local global i32 0, align 4
@AR_GPIOCR = common dso_local global i32 0, align 4
@AR_GPIOCR_0_CR_A = common dso_local global i32 0, align 4
@AR_GPIOCR_CR_SHIFT = common dso_local global i32 0, align 4
@AH_TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ar5211GpioCfgOutput(%struct.ath_hal* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.ath_hal*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.ath_hal* %0, %struct.ath_hal** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @AR_NUM_GPIO, align 4
  %10 = icmp slt i32 %8, %9
  %11 = zext i1 %10 to i32
  %12 = call i32 @HALASSERT(i32 %11)
  %13 = load %struct.ath_hal*, %struct.ath_hal** %4, align 8
  %14 = load i32, i32* @AR_GPIOCR, align 4
  %15 = call i32 @OS_REG_READ(%struct.ath_hal* %13, i32 %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* @AR_GPIOCR_0_CR_A, align 4
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* @AR_GPIOCR_CR_SHIFT, align 4
  %19 = mul nsw i32 %17, %18
  %20 = shl i32 %16, %19
  %21 = xor i32 %20, -1
  %22 = load i32, i32* %7, align 4
  %23 = and i32 %22, %21
  store i32 %23, i32* %7, align 4
  %24 = load i32, i32* @AR_GPIOCR_0_CR_A, align 4
  %25 = load i32, i32* %5, align 4
  %26 = load i32, i32* @AR_GPIOCR_CR_SHIFT, align 4
  %27 = mul nsw i32 %25, %26
  %28 = shl i32 %24, %27
  %29 = load i32, i32* %7, align 4
  %30 = or i32 %29, %28
  store i32 %30, i32* %7, align 4
  %31 = load %struct.ath_hal*, %struct.ath_hal** %4, align 8
  %32 = load i32, i32* @AR_GPIOCR, align 4
  %33 = load i32, i32* %7, align 4
  %34 = call i32 @OS_REG_WRITE(%struct.ath_hal* %31, i32 %32, i32 %33)
  %35 = load i32, i32* @AH_TRUE, align 4
  ret i32 %35
}

declare dso_local i32 @HALASSERT(i32) #1

declare dso_local i32 @OS_REG_READ(%struct.ath_hal*, i32) #1

declare dso_local i32 @OS_REG_WRITE(%struct.ath_hal*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
